--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -1,35 +1,36 @@
 #off{
+    position: absolute;
     top: 620px;
-    transition: .5s;
-}
-#off.fix{
+    left: 170px;
     width: 300px;
     height: 60px;
-    background-color: #626263;
-    position: absolute;
-    top: 520px;
-    left: 170px;
     border-radius: 20px;
     color: #fff;
     text-align: center;
     font-size: 40px;
     line-height: 140%;
+    background-color: #626263;
+    transition: .5s;
+}
+#off.fix{
+    top: 520px;
+    left: 170px;
     cursor: pointer;
 }
 #music{
     position: absolute;
-    left: 490px;
-    top: 620px;
+    /* left: 490px;
+    top: 620px; */
+    left: 1280px;
+    top: 10px;
     width: 620px;
     height: 600px;
-    left: 490px;
+    border-top: 2px solid #98989b;
+    border-bottom: 2px solid #98989b;
     transition: .5s;
 }
 #music.fix{
-    width: 620px;
-    height: 600px;
     left: 490px;
     top: 10px;
-    border-top: 2px solid blue;
-    border-bottom: 2px solid blue;
+    background-color: #2d2d31;
 }
