--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -1,4 +1,4 @@
-#off{
+#back{
     position: absolute;
     top: 620px;
     left: 170px;
@@ -12,7 +12,7 @@
     background-color: #626263;
     transition: .5s;
 }
-#off.fix{
+#back.fix{
     top: 520px;
     left: 170px;
     cursor: pointer;
@@ -28,9 +28,61 @@
     border-top: 2px solid #98989b;
     border-bottom: 2px solid #98989b;
     transition: .5s;
+    overflow: scroll;
+}
+#music::-webkit-scrollbar{
+    display: none;
 }
 #music.fix{
     left: 490px;
     top: 10px;
     background-color: #2d2d31;
+}
+#music ul li{
+    list-style: none;
+    background-color: #333335;
+    height: 64px;
+    display: flex;
+    padding: 8px;
+}
+#music ul li:nth-child(2n){
+    background-color: #232325;
+}
+#music ul li .play{
+    width: 48px;
+    height: 48px;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    filter: grayscale(.6) brightness(.6);
+    margin-right: 12px;
+}
+#music ul li:hover .play{
+    filter: grayscale(0) brightness(1);
+}
+#music ul li .play img{
+    width: 102%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#music ul li .id{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    font-weight: 800;
+}
+#music ul li .id .title{
+    font-size: 20px;
+    font-weight: 800;
+}
+#music ul li:hover .title{
+    color: #d9d9db;
+}
+#music ul li .id .album{
+    color: #050505;
+}
+#music ul li:hover .album{
+    color: #949496;
 }
