--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -38,17 +38,18 @@
     top: 10px;
     background-color: #2d2d31;
 }
-#music ul li{
+#music ul li.song{
     list-style: none;
     background-color: #333335;
     height: 64px;
     display: flex;
     padding: 8px;
+    position: relative;
 }
-#music ul li:nth-child(2n){
+#music ul li.song:nth-child(2n){
     background-color: #232325;
 }
-#music ul li .play{
+#music ul li.song .play{
     width: 48px;
     height: 48px;
     border-radius: 8px;
@@ -57,32 +58,52 @@
     filter: grayscale(.6) brightness(.6);
     margin-right: 12px;
 }
-#music ul li:hover .play{
+#music ul li.song:hover .play{
     filter: grayscale(0) brightness(1);
 }
-#music ul li .play img{
+#music ul li.song .play img{
     width: 102%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#music ul li .id{
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
+#music ul li.song .id{
     font-weight: 800;
 }
-#music ul li .id .title{
+#music ul li.song .id .title{
+    color: #000;
     font-size: 20px;
-    font-weight: 800;
+    line-height: 160%;
 }
-#music ul li:hover .title{
+#music ul li.song:hover .title{
     color: #d9d9db;
 }
-#music ul li .id .album{
+#music ul li.song .id .album{
     color: #050505;
+    font-size: 14px;
+    line-height: 120%;
 }
-#music ul li:hover .album{
+#music ul li.song:hover .album{
     color: #949496;
+  vertical-align: top;
+}
+#music ul li.song .function{
+    position: absolute;
+    right: 16px;
+}
+#music ul li.song .function ul{
+    display: flex;
+    height: 48px;
+    padding: 10px 0;
+}
+#music ul li.song .function ul li{
+    list-style: none;
+}
+#music ul li.song .function ul li a{
+    color: #656368;
+    font-size: 28px;
+}
+#music ul li.song .function ul li a:hover{
+    color: #fff;
 }
