--- a/css/artist/card.css
+++ b/css/artist/card.css
@@ -2,18 +2,28 @@
 body{
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
 }
 #list{
     position: relative;
     width: 1280px;
-    height: 620px;
+    height: 470px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: "Josefin Sans", sans-serif;
     overflow: hidden;
+    margin: calc(50vh - 280px) 0;
+}
+#list .card{
+    position: absolute;
+    width: 300px;
+    height: 400px;
+    background-color: #98989b;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: .5s;
+    top: 0;
 }
 #list .card:nth-child(1){
     left: 170px;
@@ -24,18 +34,8 @@ body{
 #list .card:nth-child(3){
     left: 810px;
 }
-#list .card{
-    position: absolute;
-    width: 300px;
-    height: 400px;
-    background-color: #98989b;
-    border-radius: 20px;
-    overflow: hidden;
-    transition: .5s;
-    top: 110px;
-}
 #list .card.none{
-    top: 620px;
+    top: 470px;
 }
 #list .card.fix{
     left: 170px;
