--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -1,6 +1,6 @@
 #back{
     position: absolute;
-    top: 620px;
+    top: 470px;
     left: 170px;
     width: 300px;
     height: 60px;
@@ -13,18 +13,16 @@
     transition: .5s;
 }
 #back.fix{
-    top: 520px;
+    top: 410px;
     left: 170px;
     cursor: pointer;
 }
 #music{
     position: absolute;
-    /* left: 490px;
-    top: 620px; */
     left: 1280px;
-    top: 10px;
+    top: 0;
     width: 620px;
-    height: 600px;
+    height: 470px;
     border-top: 2px solid #98989b;
     border-bottom: 2px solid #98989b;
     transition: .5s;
@@ -35,13 +33,14 @@
 }
 #music.fix{
     left: 490px;
-    top: 10px;
+    top: 0;
     background-color: #2d2d31;
 }
 #music ul li.song{
     list-style: none;
     background-color: #333335;
     height: 64px;
+    width: 620px;
     display: flex;
     padding: 8px;
     position: relative;
@@ -49,7 +48,19 @@
 #music ul li.song:nth-child(2n){
     background-color: #232325;
 }
-#music ul li.song .play{
+#music ul li.song canvas{
+    display: none;
+}
+#music ul li.song.active canvas{
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+#music ul li.song .cover{
     width: 48px;
     height: 48px;
     border-radius: 8px;
@@ -57,11 +68,13 @@
     position: relative;
     filter: grayscale(.6) brightness(.6);
     margin-right: 12px;
+    z-index: 1;
 }
-#music ul li.song:hover .play{
+#music ul li.song.active .cover,
+#music ul li.song:hover .cover{
     filter: grayscale(0) brightness(1);
 }
-#music ul li.song .play img{
+#music ul li.song .cover img{
     width: 102%;
     position: absolute;
     top: 50%;
@@ -70,13 +83,14 @@
 }
 #music ul li.song .id{
     font-weight: 800;
+    z-index: 1;
 }
 #music ul li.song .id .title{
     color: #000;
     font-size: 20px;
     line-height: 160%;
 }
-#music ul li.song:hover .title{
+#music ul li.song:not(.active):hover .title{
     color: #d9d9db;
 }
 #music ul li.song .id .album{
@@ -84,26 +98,31 @@
     font-size: 14px;
     line-height: 120%;
 }
-#music ul li.song:hover .album{
+#music ul li.song:not(.active):hover .album{
     color: #949496;
   vertical-align: top;
 }
 #music ul li.song .function{
     position: absolute;
     right: 16px;
+    z-index: 1;
 }
 #music ul li.song .function ul{
     display: flex;
     height: 48px;
     padding: 10px 0;
+    gap: 8px;
 }
 #music ul li.song .function ul li{
     list-style: none;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
-#music ul li.song .function ul li a{
+#music ul li.song .function ul li .ion-icon{
     color: #656368;
     font-size: 28px;
 }
-#music ul li.song .function ul li a:hover{
+#music ul li.song .function ul li .ion-icon:hover{
     color: #fff;
 }
