--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -53,7 +53,25 @@
 }
 #music ul li.song.active{
     height: 66px;
-    border-bottom: 2px solid #828286;
+}
+#music ul li.song.active .progress{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 2px;
+    background-color: #828286;
+    cursor: pointer;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+}
+#music ul li.song.active .progress::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    background-color: var(--color-main);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    box-shadow: 0 5px 5px rgba(71, 71, 71, 0.22);
 }
 #music ul li.song.active canvas{
     display: block;
