--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -55,11 +55,9 @@
 #music ul li.song .progress{
     display: none;
 }
-#music ul li.song.active{
-    height: 66px;
-}
 #music ul li.song.active .progress{
     -webkit-appearance: none;
+    appearance: none; 
     display: block;
     width: 100%;
     height: 2px;
@@ -69,14 +67,25 @@
     left: 0;
     bottom: 0;
     z-index: 2;
+    outline: none;
+    transition: .2s ease-in-out;
+}
+#music ul li.song.active .progress:hover{
+    height: 4px;
 }
 #music ul li.song.active .progress::-webkit-slider-thumb{
     -webkit-appearance: none;
+    width: 0px;
+    height: 0px;
+    transition: .2s ease-in-out;
+}
+#music ul li.song.active .progress:hover::-webkit-slider-thumb{
+    -webkit-appearance: none;
     background-color: var(--color-main);
-    width: 10px;
-    height: 10px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
-    box-shadow: 0 5px 5px rgba(71, 71, 71, 0.22);
+    box-shadow: 0 0px 4px var(--color-shadow);
 }
 #music ul li.song.active canvas{
     display: block;
@@ -93,14 +102,13 @@
     border-radius: 8px;
     overflow: hidden;
     position: relative;
-    filter: grayscale(.6) brightness(.6);
+    filter: grayscale(0) brightness(1);
     margin-right: 12px;
     z-index: 1;
     cursor: pointer;
 }
-#music ul li.song.active .cover,
-#music ul li.song:hover .cover{
-    filter: grayscale(0) brightness(1);
+#music ul li.song:hover .cover img{
+    filter: grayscale(.6) brightness(.4);
 }
 #music ul li.song .cover .playBtn,
 #music ul li.song .cover .pauseBtn{
@@ -165,11 +173,44 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    color: transparent;
+    display: flex;
 }
-#music ul li.song .function ul li .ion-icon{
+#music ul li.song.active .function ul li .ion-icon,
+#music ul li.song .function ul li .liveLink{
     color: #656368;
     font-size: 28px;
 }
-#music ul li.song .function ul li .ion-icon:hover{
+#music ul li.song .function ul li .liveLink:hover{
     color: #fff;
+}
+#music ul li.song .function ul li .volumeControl{
+    display: none;
+}
+#music ul li.song.active .function ul li .volumeControl{
+    -webkit-appearance: none;
+    appearance: none; 
+    display: block;
+    width: 60px;
+    height: 2px;
+    background-color: #828286;
+    cursor: pointer;
+}
+#music ul li.song.active .progress{
+    background-color: #828286;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+    outline: none;
+    transition: .2s ease-in-out;
+}
+#music ul li.song.active .progress:hover{
+    height: 4px;
+}
+#music ul li.song.active .progress::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 0px;
+    height: 0px;
+    transition: .2s ease-in-out;
 }
