--- a/css/home.css
+++ b/css/home.css
@@ -16,3 +16,15 @@ body{
     background-color: var(--color-background);
     padding: 0 var(--body-padding-side);
 }
+img {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+}
