--- a/css/artist/music.css
+++ b/css/artist/music.css
@@ -7,6 +7,7 @@
     border-radius: 20px;
     color: #fff;
     text-align: center;
+    padding-top: 10px;
     font-size: 40px;
     line-height: 140%;
     background-color: #626263;
